--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -26,7 +26,7 @@
 	body{
 			font-family: 'Malgun Gothic', 'Verdana';
 			background-color: #008040;
-			color: #fff;
+			color: #000000;
 			margin: 0;
 			padding: 0;
 		}
@@ -123,7 +123,7 @@
 	}
 	div#content{
 		padding: 15px 30px;
-		background-color: #fff;
+		background-color: #ffffff;
 		margin-bottom: 30px;
 		min-height: 400px;
 	}
@@ -131,4 +131,5 @@
 		clear: both;
 		margin-top: 40px;
 	}
-	
+	table,th,td{border:1px solid gray}
+	.bgColorisYellow{background-color: #ffff00}
