--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -132,4 +132,18 @@
 		margin-top: 40px;
 	}
 	table,th,td{border:1px solid gray}
-	.bgColorisYellow{background-color: #ffff00}
+	.bgColorYellow{background-color: #ffff00}
+	.center{margin: 0 auto}
+	.width100px{width: 100%}
+	.width90pt{width:90%}
+	.width80pt{width:80%}
+	.fontColorBlue{color:blue}
+	.cursor{cursor:point}
+	.marginTop30px{margin-top: 30px}
+	.marginTop50px{margin-top: 50px}
+	.marginLeft200px{margin-left: 200px}
+	.marginFight200px{margin-right: 200px}
+	.marginBot30px{margin-bottom: 30px}
+	.marginBot50px{margin-bottom: 50px}
+	.width300px{width:300px}
+	.floatRight{float:right;}
