Command Pattern Complete

--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -134,7 +134,7 @@
 	table,th,td{border:1px solid gray}
 	.bgColorYellow{background-color: #ffff00}
 	.center{margin: 0 auto}
-	.width100px{width: 100%}
+	.width100pt{width: 100%}
 	.width90pt{width:90%}
 	.width80pt{width:80%}
 	.fontColorBlue{color:blue}
