--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -147,3 +147,12 @@
 	.marginBot50px{margin-bottom: 50px}
 	.width300px{width:300px}
 	.floatRight{float:right;}
+	
+	.pageBox{
+		list-style: none;	
+		padding: 0;
+		margin: 0;
+	}
+	.pageBox li{
+		display:inline;
+	}
